@@ -3,25 +3,18 @@ package org.sopt.app.application.auth;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
+import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
 import org.sopt.app.domain.enums.UserStatus;
 
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class PlaygroundAuthInfo {
-
-    @Getter
-    @Builder
-    @ToString
-    public static class PlaygroundAccessToken {
-
-        private String accessToken;
-    }
 
     @Getter
     @Builder
@@ -30,78 +23,6 @@ public class PlaygroundAuthInfo {
 
         private String accessToken;
         private String refreshToken;
-    }
-
-    @Getter
-    @Setter
-    @ToString
-    public static class PlaygroundMain {
-
-        private Long id;
-        private String name;
-        private Long generation;
-        private String profileImage;
-        private Boolean hasProfile;
-        private String accessToken;
-        private UserStatus status;
-    }
-
-    @Getter
-    @Setter
-    @ToString
-    public static class PlaygroundProfile {
-
-        private String name;
-        private String profileImage;
-        private List<PlaygroundActivity> activities;
-    }
-
-    @Getter
-    @Setter
-    @ToString
-    public static class PlaygroundActivity {
-
-        private String cardinalInfo;
-        private List<PlaygroundCardinalActivity> cardinalActivities;
-    }
-
-    @Getter
-    @Setter
-    @ToString
-    public static class PlaygroundCardinalActivity {
-
-        private Long id;
-        private Long generation;
-        private String team;
-        private String part;
-        private Boolean isProject;
-    }
-
-    @Getter
-    @Builder
-    @ToString
-    public static class MainView {
-
-        private MainViewUser user;
-    }
-
-    @Getter
-    @Builder
-    @ToString
-    public static class MainViewUser {
-
-        private UserStatus status;
-        private String name;
-        private String profileImage;
-        private List<Long> generationList;
-    }
-
-    @Getter
-    @Setter
-    @ToString
-    public static class AccessToken {
-
-        private String accessToken;
     }
 
     @Getter
@@ -133,30 +54,65 @@ public class PlaygroundAuthInfo {
     }
 
     @Getter
+    @Setter
+    @ToString
+    public static class PlaygroundMain {
+
+        private Long id;
+        private String name;
+        private Long generation;
+        private String profileImage;
+        private Boolean hasProfile;
+        private String accessToken;
+        private UserStatus status;
+    }
+
+    @Getter
     @Builder
     @ToString
-    @NoArgsConstructor(access = AccessLevel.PRIVATE)
-    @AllArgsConstructor(access = AccessLevel.PRIVATE)
-    public static class MemberProfile {
+    public static class MainView {
 
-        @JsonProperty("memberId")
-        private Long id;
-        private String profileImage;
+        private MainViewUser user;
+    }
+
+    @Getter
+    @Builder
+    @ToString
+    public static class MainViewUser {
+
+        private UserStatus status;
         private String name;
+        private String profileImage;
+        private List<Long> generationList;
+    }
+
+    @Getter
+    @Setter
+    @Builder
+    @ToString
+    @NoArgsConstructor(access = AccessLevel.PUBLIC)
+    @AllArgsConstructor(access = AccessLevel.PUBLIC)
+    public static class PlaygroundProfile {
+
+        private Long memberId;
+        private String name;
+        private String profileImage;
         private List<ActivityCardinalInfo> activities;
 
         public ActivityCardinalInfo getLatestActivity() {
             return activities.stream()
-                    .sorted(Comparator.comparing(ActivityCardinalInfo::getGeneration, Comparator.reverseOrder()))
-                    .collect(Collectors.toList())
+                    .sorted(Comparator.comparing(PlaygroundAuthInfo.ActivityCardinalInfo::getGeneration,
+                            Comparator.reverseOrder()))
+                    .toList()
                     .get(0);
         }
     }
 
     @Getter
+    @Setter
     @Builder
-    @NoArgsConstructor(access = AccessLevel.PRIVATE)
-    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PUBLIC)
+    @AllArgsConstructor(access = AccessLevel.PUBLIC)
     public static class ActivityCardinalInfo {
 
         private String cardinalInfo;
@@ -170,4 +126,51 @@ public class PlaygroundAuthInfo {
         }
     }
 
+    @Getter
+    @Builder
+    @ToString
+    @NoArgsConstructor(access = AccessLevel.PUBLIC)
+    @AllArgsConstructor(access = AccessLevel.PUBLIC)
+    public static class OwnPlaygroundProfile {
+
+        private String mbti;
+        private String university;
+        private List<ActivityCardinalInfo> activities;
+    }
+
+    @Getter
+    @Builder
+    @ToString
+    @NoArgsConstructor(access = AccessLevel.PUBLIC)
+    @AllArgsConstructor(access = AccessLevel.PUBLIC)
+    public static class PlaygroundProfileOfRecommendedFriendList {
+
+        private List<PlaygroundProfileOfRecommendedFriend> members;
+    }
+
+    @Getter
+    @Builder
+    @ToString
+    @NoArgsConstructor(access = AccessLevel.PUBLIC)
+    @AllArgsConstructor(access = AccessLevel.PUBLIC)
+    @EqualsAndHashCode(of = {"playgroundId"})
+    public static class PlaygroundProfileOfRecommendedFriend {
+
+        @JsonProperty("id")
+        private Long playgroundId;
+        private String mbti;
+        private String university;
+        private String profileImage;
+        private String name;
+        private List<PlaygroundActivity> activities;
+    }
+
+    @Getter
+    @NoArgsConstructor(access = AccessLevel.PUBLIC)
+    @AllArgsConstructor(access = AccessLevel.PUBLIC)
+    public static class PlaygroundActivity {
+
+        private String part;
+        private Integer generation;
+    }
 }
