@@ -1,5 +1,9 @@
 package org.sopt.app.application.poke;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
 import org.sopt.app.domain.entity.PokeMessage;
@@ -7,15 +11,14 @@ import org.sopt.app.domain.enums.PokeMessageType;
 import org.sopt.app.interfaces.postgres.PokeMessageRepository;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-
 @Service
 @RequiredArgsConstructor
 public class PokeMessageService {
 
-    private static final int MESSAGES_QUANTITY_AT_ONCE = 5;
+    private static final int MESSAGES_QUANTITY_AT_ONCE = 4;
     private static final String MESSAGES_HEADER_FOR_POKE = "함께 보낼 메시지를 선택해주세요";
     private static final String MESSAGES_HEADER_FOR_REPLY = "답장하고 싶은 메시지를 선택해주세요";
+    private static final String FIXED_MESSAGE = "콕 \uD83D\uDC48";
     private final PokeMessageRepository messageRepository;
 
     public String getMessagesHeaderComment(String type) {
@@ -25,13 +28,20 @@ public class PokeMessageService {
         }
         return MESSAGES_HEADER_FOR_POKE;
     }
+
     public List<PokeMessage> pickRandomMessageByTypeOf(String type) {
         PokeMessageType messageType = PokeMessageType.ofParam(type);
         val messages = messageRepository.findAllByType(messageType);
         Collections.shuffle(messages, new Random());
         return messages.stream()
                 .limit(MESSAGES_QUANTITY_AT_ONCE)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public PokeMessage getFixedMessage() {
+        return PokeMessage.builder()
+                .id(0L).content(FIXED_MESSAGE).type(PokeMessageType.POKE_ALL)
+                .build();
     }
 }
 
