@@ -6,6 +6,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
@@ -239,6 +240,7 @@ public class SoptampUserService {
         soptampUserRepository.save(newSoptampUser);
     }
 
+    @Transactional
     public void initAllSoptampUserPoints() {
         val soptampUserList = soptampUserRepository.findAll();
         soptampUserList.forEach(SoptampUser::initTotalPoints);
@@ -249,41 +251,68 @@ public class SoptampUserService {
         return soptampUserRepository.findAllByUserIdIn(userIdList);
     }
 
+    @Transactional
     public List<SoptampUser> initAllCurrentGenerationSoptampUser(
             List<SoptampUser> soptampUserList,
             List<SoptampUserInfo.SoptampUserPlaygroundInfo> userInfoList
     ) {
         val validatedSoptampUserList = validateNickname(soptampUserList);
-        validatedSoptampUserList.stream().forEach(e -> System.out.println(e));
 
-        soptampUserList.stream().forEach(soptampUser -> {
+        validatedSoptampUserList.stream().forEach(soptampUser -> {
             val userInfo = userInfoList.stream()
                     .filter(e -> soptampUser.getUserId().equals(e.getUserId()))
                     .findFirst().get();
             PlaygroundPart part = findPlaygroundPart(userInfo.getPart());
-            soptampUser.updateNicknameAndGenerationAndPart(
-                    part.getSoptampNickname() + soptampUser.getNickname(),
+            soptampUser.updateGenerationAndPart(
                     userInfo.getGeneration(),
                     part
             );
         });
-        soptampUserRepository.saveAll(soptampUserList);
+        soptampUserRepository.saveAll(validatedSoptampUserList);
 
-        return soptampUserList;
+        return validatedSoptampUserList;
     }
 
+    @Transactional
     public List<SoptampUser> validateNickname(List<SoptampUser> soptampUserList) {
-        soptampUserList = soptampUserList.stream().sorted(Comparator.comparing(SoptampUser::getNickname))
-                .collect(Collectors.toList());
-        val nicknameList = soptampUserList.stream().map(SoptampUser::getNickname).collect(Collectors.toList());
-        val uniqueNicknameList = nicknameList.stream().distinct().collect(Collectors.toList());
+        // uniqueNickname map 생성
+        val nicknameMap = generateUniqueNicknameMap(
+                soptampUserList.stream().sorted(Comparator.comparing(SoptampUser::getNickname))
+                        .map(SoptampUser::getNickname).toList());
 
+        // soptampUser 리스트 userId 기준으로 중복 닉네임 알파벳 부여
+        return updateUniqueNickname(soptampUserList, nicknameMap);
+    }
+
+    private HashMap<String, ArrayList<String>> generateUniqueNicknameMap(List<String> nicknameList) {
+        val nicknameMap = new HashMap<String, ArrayList<String>>();
+        val uniqueNicknameList = nicknameList.stream().distinct().collect(Collectors.toList());
         uniqueNicknameList.stream().forEach(nickname -> {
             val count = Collections.frequency(nicknameList, nickname);
-            val alphabetList = Arrays.asList("ABCDEFGHIJKLMNOPQRSTUVWXYZ".substring(0, count).split(""));
-            // 동명이인 처리
+            if (count == 1) {
+                nicknameMap.put(nickname, new ArrayList<>(List.of()));
+            } else {
+                val alphabetList = Arrays.asList("ABCDEFGHIJKLMNOPQRSTUVWXYZ".substring(0, count).split(""));
+                val changedList = alphabetList.stream().map(alphabet -> nickname + alphabet).toList();
+                nicknameMap.put(nickname, new ArrayList<>(changedList));
+            }
+        });
+        return nicknameMap;
+    }
+
+    private List<SoptampUser> updateUniqueNickname(
+            List<SoptampUser> soptampUserList,
+            HashMap<String, ArrayList<String>> nicknameMap
+    ) {
+        soptampUserList.stream().sorted(Comparator.comparing(SoptampUser::getUserId)).forEach(soptampUser -> {
+            val validatedNicknameList = nicknameMap.get(soptampUser.getNickname());
+            if (validatedNicknameList.size() > 0) {
+                val validatedNickname = validatedNicknameList.get(0);
+                validatedNicknameList.remove(0);
+                nicknameMap.put(soptampUser.getNickname(), validatedNicknameList);
+                soptampUser.updateNickname(validatedNickname);
+            }
         });
         return soptampUserList;
     }
-
 }
