@@ -1,5 +1,6 @@
 package org.sopt.app.facade;
 
+import java.util.Objects;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
@@ -9,9 +10,11 @@ import org.sopt.app.application.soptamp.SoptampPointService;
 import org.sopt.app.application.soptamp.SoptampUserInfo.SoptampUserPlaygroundInfo;
 import org.sopt.app.application.soptamp.SoptampUserService;
 import org.sopt.app.application.stamp.StampService;
+import org.sopt.app.application.user.UserInfo.UserProfile;
 import org.sopt.app.application.user.UserService;
-import org.sopt.app.common.exception.BadRequestException;
 import org.sopt.app.domain.entity.User;
+import org.sopt.app.presentation.admin.AdminSoptampResponse;
+import org.sopt.app.presentation.admin.AdminSoptampResponse.Rows;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -27,8 +30,7 @@ public class AdminSoptampFacade {
     private final UserService userService;
 
     @Transactional
-    public void initAllMissionAndStampAndPoints(User user) {
-        validateAdminUser(user);
+    public void initAllMissionAndStampAndPoints() {
         missionService.deleteAll();
         stampService.deleteAll();
         soptampPointService.deleteAll();
@@ -36,9 +38,7 @@ public class AdminSoptampFacade {
     }
 
     @Transactional
-    public int initCurrentGenerationInfo(User user) {
-        validateAdminUser(user);
-
+    public AdminSoptampResponse.Rows initCurrentGenerationInfo(User user) {
         // 플그에서 현재 기수 멤버 아이디 조회
         val currentGenerationPlaygroundIdList = playgroundAuthService.getPlayGroundUserIds(user.getPlaygroundToken())
                 .getUserIds();
@@ -52,23 +52,23 @@ public class AdminSoptampFacade {
 
         // 앱 아이디로 솝탬프 유저 정보 조회
         val soptampUserList = soptampUserService.getSoptampUserInfoList(
-                userProfileList.stream().map(e -> e.getUserId()).collect(Collectors.toList()));
+                userProfileList.stream().map(UserProfile::getUserId).collect(Collectors.toList()));
 
         // 플그 프로필 리스트와 앱 솝탬프 유저 정보 매핑
         val userInfoList = memberProfileList.stream().map(
                 memberProfile -> {
                     val userProfile = userProfileList.stream()
-                            .filter(u -> u.getPlaygroundId().equals(memberProfile.getId()))
+                            .filter(u -> u.getPlaygroundId().equals(memberProfile.getMemberId()))
                             .findFirst();
-                    return userProfile.isEmpty() ? null :
-                            SoptampUserPlaygroundInfo.builder()
-                                    .userId(userProfile.get().getUserId())
-                                    .playgroundId(userProfile.get().getPlaygroundId())
-                                    .generation(Long.parseLong(memberProfile.getLatestActivity().getGeneration()))
-                                    .part(memberProfile.getLatestActivity().getPart())
-                                    .build();
+                    return userProfile.map(profile -> SoptampUserPlaygroundInfo.builder()
+                            .userId(profile.getUserId())
+                            .playgroundId(profile.getPlaygroundId())
+                            .name(profile.getName())
+                            .generation(Long.parseLong(memberProfile.getLatestActivity().getGeneration()))
+                            .part(memberProfile.getLatestActivity().getPart())
+                            .build()).orElse(null);
                 }
-        ).filter(x -> x != null).collect(Collectors.toList());
+        ).filter(Objects::nonNull).toList();
 
         // 플그 파트, 기수, 점수 정보 업데이트
         val updatedSoptampUserList = soptampUserService.initAllCurrentGenerationSoptampUser(soptampUserList,
@@ -78,13 +78,9 @@ public class AdminSoptampFacade {
         val currentGenerationSoptampPointList = soptampPointService.createCurrentGenerationSoptampPointList(
                 updatedSoptampUserList);
 
-        return currentGenerationSoptampPointList.size();
-    }
-
-    private void validateAdminUser(User user) {
-        // TODO: Admin User 구현 곧 할게요
-        if (!user.getUsername().equals("주어랑")) {
-            throw new BadRequestException("NONO");
-        }
+        return Rows.builder()
+                .soptampUserRows(updatedSoptampUserList.size())
+                .soptampPointRows(currentGenerationSoptampPointList.size())
+                .build();
     }
 }
